syntax = "proto3";

import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Protobuf/reference/acs12.proto";
option csharp_namespace = "AElf.Contracts.BaseContract";

service BaseContract {
  option (aelf.csharp_state) = "AElf.Contracts.BaseContract.BaseContractState";
  option (aelf.base) = "Protobuf/reference/acs12.proto";

  rpc Initialize(google.protobuf.Empty) returns (google.protobuf.Empty){
  }
    rpc GetStoredValue(google.protobuf.Empty) returns (Int32Value){
     option (aelf.is_view) = true;
    }
    rpc SetStoredValue(Int32Value) returns (google.protobuf.Empty){
    
    }
}

message Int32Value {
    int32 value = 1;
}