syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Protobuf/reference/acs12.proto";
// The namespace of this class
option csharp_namespace = "AElf.Contracts.CallerContract";

service CallerContract {
  option (aelf.csharp_state) = "AElf.Contracts.CallerContract.CallerContractState";
  option (aelf.base) = "Protobuf/reference/acs12.proto";

  rpc Initialize(google.protobuf.Empty) returns (google.protobuf.Empty){
   }

 rpc CallInitialize(google.protobuf.Empty) returns (google.protobuf.Empty){
  }

  rpc CallGetStoredValue(google.protobuf.Empty) returns (Int32Value){}


  rpc CallSetStoredValue(Int32Value) returns (google.protobuf.Empty){}  
  
}


message Int32Value {
  int32 value = 1;
 }